...
              padding: EdgeInsets.zero,
              visualDensity: VisualDensity.compact,
              constraints: const BoxConstraints(minWidth: 24, minHeight: 24),
              splashRadius: 12,
            ),
            IconButton(
              key: const ValueKey<String>('pages-add'),
              tooltip: '新建页面',
              icon: Icon(LinearIcons.addPage, size: 14, color: colors.icon),
              onPressed: () => _maybeRead<WbPageState>(context)?.addPage(),
              padding: EdgeInsets.zero,
              visualDensity: VisualDensity.compact,
              constraints: const BoxConstraints(minWidth: 24, minHeight: 24),
...
